feat: verbose logging; symlink fallback to copy; tests; dependabot; codeql; release notes

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -27,6 +27,8 @@ jobs:
           cargo audit || true
       - name: Build
         run: cargo build --release
+      - name: Test
+        run: cargo test --all --locked
       - name: Smoke test
         run: ./target/release/ggufy --help
         shell: bash
