--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,3 +10,9 @@ serde_json = "1.0"
 dirs = "5.0"
 walkdir = "2.5"
 regex = "1.11"
+thiserror = "1.0"
+
+[dev-dependencies]
+assert_cmd = "2.0"
+predicates = "3.1"
+tempfile = "3.10"
