--- a/.gitignore
+++ b/.gitignore
@@ -125,9 +125,6 @@ out/
 *.sublime-project
 *.sublime-workspace
 
-# Trae IDE state
-.trae/
-
 # ═══════════════════════════════════════════════════════════
 # OS GENERATED FILES
 # ═══════════════════════════════════════════════════════════
@@ -164,11 +161,15 @@ build/
 public/
 dist/
 
-# Rust build outputs
+# ═══════════════════════════════════════════════════════════
+# RUST BUILD ARTIFACTS
+# ═══════════════════════════════════════════════════════════
 target/
 
-# Repo-local model workspace (symlinks)
-models/
+# ═══════════════════════════════════════════════════════════
+# CI/Release transient artifacts
+# ═══════════════════════════════════════════════════════════
+artifacts/
 
 # ═══════════════════════════════════════════════════════════
 # DATABASE FILES
