--- a/uv-shim/pyproject.toml
+++ b/uv-shim/pyproject.toml
@@ -1,12 +1,13 @@
 [project]
-name = "ggufy-cli"
-version = "0.1.0"
+name = "ggufy"
+version = "0.1.1"
 description = "Python shim that invokes the ggufy binary"
 readme = "README.md"
 requires-python = ">=3.8"
 
 [project.scripts]
 ggufy = "ggufy_cli.__main__:main"
+ggufy-simple = "ggufy_cli.__main__:main_simple"
 
 [tool.uv]
 package = true
