--- a/.github/workflows/pypi-publish.yml
+++ b/.github/workflows/pypi-publish.yml
@@ -9,15 +9,13 @@ on:
 jobs:
   publish:
     runs-on: ubuntu-latest
+    permissions:
+      id-token: write  # IMPORTANT: this permission is mandatory for trusted publishing
+    environment:
+      name: pypi
+      url: https://pypi.org/p/ggufy
     steps:
       - uses: actions/checkout@v4
-      - name: Verify version matches tag
-        run: |
-          TAG="${GITHUB_REF_NAME}"
-          VER_TAG="${TAG#v}"
-          VER_FILE=$(grep -E '^version\s*=\s*"[^"]+"' uv-shim/pyproject.toml | head -1 | sed -E 's/.*"([^"]+)".*/\1/')
-          echo "tag=$VER_TAG file=$VER_FILE"
-          test "$VER_TAG" = "$VER_FILE"
       - uses: actions/setup-python@v5
         with:
           python-version: "3.11"
@@ -28,11 +26,8 @@ jobs:
           python -m pip install build
           python -m build
       - name: Publish to PyPI
-        if: ${{ secrets.PYPI_API_TOKEN != '' }}
-        uses: pypa/gh-action-pypi-publish@v1.9.0
+        uses: pypa/gh-action-pypi-publish@release/v1
         with:
           packages-dir: uv-shim/dist
           skip-existing: true
           attestations: true
-        env:
-          PYPI_API_TOKEN: ${{ secrets.PYPI_API_TOKEN }}
