--- a/.github/workflows/reusable-secret-scan.yml
+++ b/.github/workflows/reusable-secret-scan.yml
@@ -27,7 +27,7 @@ jobs:
         uses: trufflesecurity/trufflehog@main
         with:
           path: ./
-          base: ${{ github.event.repository.default_branch }}
+          base: "${{ github.base_ref || github.event.before || github.event.repository.default_branch }}"
           head: HEAD
           extra_args: --debug --only-verified
 
