--- a/.github/workflows/reusable-secret-scan.yml
+++ b/.github/workflows/reusable-secret-scan.yml
@@ -23,12 +23,35 @@ jobs:
         with:
           fetch-depth: ${{ inputs.scan-depth }}
 
+      - name: Determine diff range for TruffleHog
+        id: diff-range
+        shell: bash
+        run: |
+          set -euo pipefail
+          DEFAULT_BRANCH="${{ github.event.repository.default_branch }}"
+          ZERO_SHA="0000000000000000000000000000000000000000"
+
+          if [[ "${{ github.event_name }}" == "pull_request" ]]; then
+            git fetch origin "${{ github.event.pull_request.base.ref }}" --depth=$(( ${{ inputs.scan-depth }} + 1 ))
+            echo "base=${{ github.event.pull_request.base.sha }}" >> "$GITHUB_OUTPUT"
+            echo "head=${{ github.event.pull_request.head.sha }}" >> "$GITHUB_OUTPUT"
+          elif [[ -n "${{ github.event.before }}" && "${{ github.event.before }}" != "$ZERO_SHA" ]]; then
+            echo "base=${{ github.event.before }}" >> "$GITHUB_OUTPUT"
+            echo "head=${{ github.sha }}" >> "$GITHUB_OUTPUT"
+          else
+            git fetch origin "$DEFAULT_BRANCH" --depth=2
+            echo "base=$(git rev-parse origin/$DEFAULT_BRANCH)" >> "$GITHUB_OUTPUT"
+            echo "head=${{ github.sha }}" >> "$GITHUB_OUTPUT"
+          fi
+
+          echo "Resolved diff range: $(cat "$GITHUB_OUTPUT")"
+
       - name: TruffleHog OSS
         uses: trufflesecurity/trufflehog@main
         with:
           path: ./
-          base: "${{ github.base_ref || github.event.before || github.event.repository.default_branch }}"
-          head: HEAD
+          base: ${{ steps.diff-range.outputs.base }}
+          head: ${{ steps.diff-range.outputs.head }}
           extra_args: --debug --only-verified
 
       - name: Gitleaks
