--- a/.github/workflows/pypi-publish.yml
+++ b/.github/workflows/pypi-publish.yml
@@ -1,29 +1,24 @@
-name: Publish Python Package
+name: Publish to PyPI
 
 on:
-  push:
-    tags:
-      - "v*"
-  workflow_dispatch: {}
+  release:
+    types: [created]
+  workflow_dispatch:
 
 jobs:
   publish:
+    name: Publish to PyPI
     runs-on: ubuntu-latest
-    permissions:
-      id-token: write
     steps:
       - uses: actions/checkout@v4
+      - uses: dtolnay/rust-toolchain@stable
       - uses: actions/setup-python@v5
         with:
-          python-version: "3.11"
-      - uses: dtolnay/rust-toolchain@stable
-      - name: Build
-        run: |
-          python -m pip install --upgrade pip
-          python -m pip install maturin
-          maturin build --release --sdist
-      - name: Publish to PyPI
-        uses: pypa/gh-action-pypi-publish@release/v1
+          python-version: '3.10'
+      - name: Build and Publish
+        uses: PyO3/maturin-action@v1
+        env:
+          MATURIN_PYPI_TOKEN: ${{ secrets.PYPI_API_TOKEN }}
         with:
-          packages-dir: target/wheels
-          skip-existing: true
+          command: publish
+          args: --non-interactive --skip-existing --yes
