Fix pypi-publish args

--- a/.github/workflows/pypi-publish.yml
+++ b/.github/workflows/pypi-publish.yml
@@ -21,4 +21,4 @@ jobs:
           MATURIN_PYPI_TOKEN: ${{ secrets.PYPI_API_TOKEN }}
         with:
           command: publish
-          args: --non-interactive --skip-existing --yes
+          args: --non-interactive --skip-existing
