--- a/.github/workflows/pypi-publish.yml
+++ b/.github/workflows/pypi-publish.yml
@@ -5,20 +5,49 @@ on:
     types: [created]
   workflow_dispatch:
 
+permissions:
+  contents: read
+
 jobs:
   publish:
     name: Publish to PyPI
     runs-on: ubuntu-latest
+    environment:
+      name: pypi
+      url: https://pypi.org/p/ggufy
+    permissions:
+      id-token: write
+      contents: read
     steps:
       - uses: actions/checkout@v4
+
+      - name: Verify version matches tag
+        run: |
+          TAG="${GITHUB_REF_NAME}"
+          # Strip 'v' prefix if present
+          VER_TAG="${TAG#v}"
+          # Extract version from pyproject.toml
+          VER_FILE=$(grep -E '^version\s*=\s*"[^"]+"' pyproject.toml | head -1 | sed -E 's/.*"([^"]+)".*/\1/')
+          echo "tag=$VER_TAG file=$VER_FILE"
+          if [ "$VER_TAG" != "$VER_FILE" ]; then
+            echo "Error: Version mismatch. Tag is $VER_TAG but pyproject.toml is $VER_FILE"
+            exit 1
+          fi
+
       - uses: dtolnay/rust-toolchain@stable
+
       - uses: actions/setup-python@v5
         with:
           python-version: '3.10'
-      - name: Build and Publish
+
+      - name: Build wheels
         uses: PyO3/maturin-action@v1
-        env:
-          MATURIN_PYPI_TOKEN: ${{ secrets.PYPI_API_TOKEN }}
         with:
-          command: publish
-          args: --non-interactive --skip-existing
+          command: build
+          args: --release --out dist
+
+      - name: Publish to PyPI
+        uses: pypa/gh-action-pypi-publish@release/v1
+        with:
+          packages-dir: dist
+          skip-existing: true
