--- a/.github/workflows/pypi-publish.yml
+++ b/.github/workflows/pypi-publish.yml
@@ -12,15 +12,9 @@ jobs:
   publish:
     name: Publish to PyPI
     runs-on: ubuntu-latest
-    environment:
-      name: pypi
-      url: https://pypi.org/p/ggufy
-    permissions:
-      id-token: write
-      contents: read
     steps:
       - uses: actions/checkout@v4
-
+      
       - name: Verify version matches tag
         run: |
           TAG="${GITHUB_REF_NAME}"
@@ -35,19 +29,15 @@ jobs:
           fi
 
       - uses: dtolnay/rust-toolchain@stable
-
+      
       - uses: actions/setup-python@v5
         with:
           python-version: '3.10'
 
-      - name: Build wheels
+      - name: Build and Publish
         uses: PyO3/maturin-action@v1
+        env:
+          MATURIN_PYPI_TOKEN: ${{ secrets.PYPI_API_TOKEN }}
         with:
-          command: build
-          args: --release --out dist
-
-      - name: Publish to PyPI
-        uses: pypa/gh-action-pypi-publish@release/v1
-        with:
-          packages-dir: dist
-          skip-existing: true
+          command: publish
+          args: --non-interactive --skip-existing
